--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+aniso8601==9.0.1
 blinker==1.6.2
 click==8.1.3
 dnspython==2.3.0
 Flask==2.3.2
+flask-restplus==0.13.0
 itsdangerous==2.1.2
 pymongo==4.4.0
+pytz==2023.3
 Werkzeug==2.3.6
